# more-stupidfer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  doing_in_python.ipynb  pyproject.toml
src/: data.rs  data_py.rs  lib.rs  main.rs  record_types.rs  records.rs  test_information.rs  util.rs
src/records/: records.rs
